{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 48,
  "lineage": "2bca17e1-1b6a-ce00-9e41-9d0f4ca9c63f",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f757b2dd6c23cd4f",
            "association_id": "eipassoc-0e8903bb5d1566bc3",
            "domain": "vpc",
            "id": "eipalloc-0f757b2dd6c23cd4f",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0e74d4d017ba3f49f",
            "private_dns": "ip-10-0-1-39.eu-west-1.compute.internal",
            "private_ip": "10.0.1.39",
            "public_dns": "ec2-99-80-236-110.eu-west-1.compute.amazonaws.com",
            "public_ip": "99.80.236.110",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "prod-nat-eip-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-nat-eip-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044413e74d360c2ca",
            "association_id": "eipassoc-0d780a14f3e68698d",
            "domain": "vpc",
            "id": "eipalloc-044413e74d360c2ca",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-01ee00d229c1c12fa",
            "private_dns": "ip-10-0-2-76.eu-west-1.compute.internal",
            "private_ip": "10.0.2.76",
            "public_dns": "ec2-34-251-187-15.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.251.187.15",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "prod-nat-eip-2"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-nat-eip-2"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00fb5e176c98d698e",
            "association_id": "eipassoc-04cac85c5eafacf9b",
            "domain": "vpc",
            "id": "eipalloc-00fb5e176c98d698e",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0600c7331c9ab0ebf",
            "private_dns": "ip-10-0-3-216.eu-west-1.compute.internal",
            "private_ip": "10.0.3.216",
            "public_dns": "ec2-54-220-220-110.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.220.220.110",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "prod-nat-eip-3"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-nat-eip-3"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:149536461874:internet-gateway/igw-0932e069301f8ee20",
            "id": "igw-0932e069301f8ee20",
            "owner_id": "149536461874",
            "tags": {
              "Environment": "prod",
              "Name": "prod-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-0b0da65d25d3a7fbc"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f757b2dd6c23cd4f",
            "association_id": "eipassoc-0e8903bb5d1566bc3",
            "connectivity_type": "public",
            "id": "nat-024e0a9497934050f",
            "network_interface_id": "eni-0e74d4d017ba3f49f",
            "private_ip": "10.0.1.39",
            "public_ip": "99.80.236.110",
            "subnet_id": "subnet-0c5fb5876fa81c6b9",
            "tags": {
              "Environment": "prod",
              "Name": "prod-nat-gw-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-nat-gw-1"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044413e74d360c2ca",
            "association_id": "eipassoc-0d780a14f3e68698d",
            "connectivity_type": "public",
            "id": "nat-01ecc6e61aad5160b",
            "network_interface_id": "eni-01ee00d229c1c12fa",
            "private_ip": "10.0.2.76",
            "public_ip": "34.251.187.15",
            "subnet_id": "subnet-00b7111a61caa6f2a",
            "tags": {
              "Environment": "prod",
              "Name": "prod-nat-gw-2"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-nat-gw-2"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00fb5e176c98d698e",
            "association_id": "eipassoc-04cac85c5eafacf9b",
            "connectivity_type": "public",
            "id": "nat-0273bf03b95cac42b",
            "network_interface_id": "eni-0600c7331c9ab0ebf",
            "private_ip": "10.0.3.216",
            "public_ip": "54.220.220.110",
            "subnet_id": "subnet-02740fb2d92ce73b6",
            "tags": {
              "Environment": "prod",
              "Name": "prod-nat-gw-3"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-nat-gw-3"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:149536461874:route-table/rtb-026cc0cc635767b1b",
            "id": "rtb-026cc0cc635767b1b",
            "owner_id": "149536461874",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-024e0a9497934050f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "prod-private-rt-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0da65d25d3a7fbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:149536461874:route-table/rtb-022d0b8a0fb1eca15",
            "id": "rtb-022d0b8a0fb1eca15",
            "owner_id": "149536461874",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01ecc6e61aad5160b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "prod-private-rt-2"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0da65d25d3a7fbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:149536461874:route-table/rtb-0a7f7a806c0926ab5",
            "id": "rtb-0a7f7a806c0926ab5",
            "owner_id": "149536461874",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0273bf03b95cac42b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "prod-private-rt-3"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-private-rt-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0da65d25d3a7fbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:149536461874:route-table/rtb-02974e77aae82d7a0",
            "id": "rtb-02974e77aae82d7a0",
            "owner_id": "149536461874",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0932e069301f8ee20",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "prod-public-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0da65d25d3a7fbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2d694b35318e663",
            "route_table_id": "rtb-026cc0cc635767b1b",
            "subnet_id": "subnet-0ac79c393fe6ea304"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06228d1ff49808bde",
            "route_table_id": "rtb-022d0b8a0fb1eca15",
            "subnet_id": "subnet-075b529c18032c3fd"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0467bbe2dc29e3ab1",
            "route_table_id": "rtb-0a7f7a806c0926ab5",
            "subnet_id": "subnet-0a018d7ac78b80dfd"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0688e994c34e84bdd",
            "route_table_id": "rtb-02974e77aae82d7a0",
            "subnet_id": "subnet-0c5fb5876fa81c6b9"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adc352705e0af1b6",
            "route_table_id": "rtb-02974e77aae82d7a0",
            "subnet_id": "subnet-00b7111a61caa6f2a"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ebcb94fc3270334",
            "route_table_id": "rtb-02974e77aae82d7a0",
            "subnet_id": "subnet-02740fb2d92ce73b6"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:149536461874:security-group/sg-06737db3c7abf50fb",
            "description": "Security group for EKS cluster control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06737db3c7abf50fb",
            "ingress": [],
            "name": "prod-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "149536461874",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "prod-eks-cluster-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0da65d25d3a7fbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:149536461874:security-group/sg-0f1e109fa21adfa59",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1e109fa21adfa59",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06737db3c7abf50fb"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "prod-eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "149536461874",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "prod-eks-nodes-sg",
              "kubernetes.io/cluster/prod-eks": "owned"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-eks-nodes-sg",
              "kubernetes.io/cluster/prod-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0da65d25d3a7fbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.eks_cluster",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:149536461874:subnet/subnet-0ac79c393fe6ea304",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac79c393fe6ea304",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536461874",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-private-subnet-1",
              "kubernetes.io/cluster/prod-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-private-subnet-1",
              "kubernetes.io/cluster/prod-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b0da65d25d3a7fbc"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:149536461874:subnet/subnet-075b529c18032c3fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075b529c18032c3fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536461874",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-private-subnet-2",
              "kubernetes.io/cluster/prod-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-private-subnet-2",
              "kubernetes.io/cluster/prod-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b0da65d25d3a7fbc"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:149536461874:subnet/subnet-0a018d7ac78b80dfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a018d7ac78b80dfd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536461874",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-private-subnet-3",
              "kubernetes.io/cluster/prod-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-private-subnet-3",
              "kubernetes.io/cluster/prod-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b0da65d25d3a7fbc"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:149536461874:subnet/subnet-0c5fb5876fa81c6b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5fb5876fa81c6b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149536461874",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-public-subnet-1",
              "kubernetes.io/cluster/prod-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-public-subnet-1",
              "kubernetes.io/cluster/prod-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b0da65d25d3a7fbc"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:149536461874:subnet/subnet-00b7111a61caa6f2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b7111a61caa6f2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149536461874",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-public-subnet-2",
              "kubernetes.io/cluster/prod-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-public-subnet-2",
              "kubernetes.io/cluster/prod-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b0da65d25d3a7fbc"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:149536461874:subnet/subnet-02740fb2d92ce73b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02740fb2d92ce73b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149536461874",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-public-subnet-3",
              "kubernetes.io/cluster/prod-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-public-subnet-3",
              "kubernetes.io/cluster/prod-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b0da65d25d3a7fbc"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:149536461874:vpc/vpc-0b0da65d25d3a7fbc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a8cea13ceaa88b4c",
            "default_route_table_id": "rtb-088ecbcf0473fd165",
            "default_security_group_id": "sg-0c50f7e70a0df2f4b",
            "dhcp_options_id": "dopt-08b70dbaf811190c8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b0da65d25d3a7fbc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-088ecbcf0473fd165",
            "owner_id": "149536461874",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc"
            }
          }
        }
      ]
    }
  ]
}